--- a/styles.css
+++ b/styles.css
@@ -262,13 +262,22 @@ section {
   flex-grow: 1;
   flex-wrap: wrap;
   padding: 0px;
-  margin: 5px 0px 0px;
+  margin: 10px 0px 0px;
   -webkit-box-flex: 1;
 }
 
 .tech-stack > li {
   margin-right: 15px;
   color: var(--color-orange);
+  font-family: var(--ff-monospace);
+  font-size: var(--fs-md);
+  font-weight: 300;
+  line-height: 1.75;
+}
+
+.be.tech-stack > li {
+  margin-right: 15px;
+  color: var(--color-yellow);
   font-family: var(--ff-monospace);
   font-size: var(--fs-md);
   font-weight: 300;
@@ -406,7 +415,7 @@ section {
   font-size: var(--fs-md);
   font-family: var(--ff-monospace);
   font-weight: 500;
-  margin-top: 50px;
+  margin: 50px 0px 30px 0px;
   padding: 1rem 3rem;
   display: inline-block;
   position: relative;
@@ -416,6 +425,12 @@ section {
 .contact-btn:hover {
   background-color: var(--color-red-hover);
   color: var(--color-white);
+}
+
+.resume-text {
+  font-size: var(--fs-md);
+  color: var(--color-white);
+  font-family: var(--ff-monospace);
 }
 
 .social-content {
