--- a/styles.css
+++ b/styles.css
@@ -292,6 +292,10 @@ section {
     line-height: 1.75;
 }
 
+.be-tech {
+    margin-top: 15px;
+}
+
 .cta-btn {
     background-color: var(--color-red);
     color: var(--color-white);
